Fix Giscus category to General

--- a/site/hugo.toml
+++ b/site/hugo.toml
@@ -175,7 +175,7 @@ enableEmoji = true
       enable = true
       repo = "overkazaf/reverse_engineering"
       repoId = "R_kgDOQuY7-A"
-      category = "Announcements"
+      category = "General"
       categoryId = "DIC_kwDOQuY7-M4C0NXP"
       mapping = "pathname"
       strict = "0"
